# computer_graphics_lab

OpenGL_test/: opengl_demo  opengl_demo.cpp
hw0/: README.md  opengl_demo.cpp
hw0/Part1/: Makefile  read_obj  read_obj.cpp
hw0/Part1/read_obj.dSYM/Contents/: Info.plist
hw0/Part1/read_obj.dSYM/Contents/Resources/DWARF/: read_obj
hw0/Part1/read_obj.dSYM/Contents/Resources/Relocations/aarch64/: read_obj.yml
hw0/Part2/: Makefile  inverse_transform  inverse_transform.cpp
hw0/Part2/inverse_transform.dSYM/Contents/: Info.plist
hw0/Part2/inverse_transform.dSYM/Contents/Resources/DWARF/: inverse_transform
hw0/Part2/inverse_transform.dSYM/Contents/Resources/Relocations/aarch64/: inverse_transform.yml
hw0/Part3/: Makefile  load_transformed_objects  load_transformed_objects.cpp
hw0/Part3/load_transformed_objects.dSYM/Contents/: Info.plist
hw0/Part3/load_transformed_objects.dSYM/Contents/Resources/DWARF/: load_transformed_objects
hw0/Part3/load_transformed_objects.dSYM/Contents/Resources/Relocations/aarch64/: load_transformed_objects.yml
hw0/Part4/: Makefile  ppm_test  ppm_test.cpp
hw0/Part4/ppm_test.dSYM/Contents/Resources/DWARF/: ppm_test
hw0/Part4/ppm_test.dSYM/Contents/Resources/Relocations/aarch64/: ppm_test.yml
hw1/: Makefile  README.md  image.ppm  io_utils.cpp  io_utils.h  main.cpp  scene_types.h  transform_utils.cpp  transform_utils.h  wireframe_renderer
hw1/wireframe_renderer.dSYM/Contents/: Info.plist
hw1/wireframe_renderer.dSYM/Contents/Resources/DWARF/: wireframe_renderer
hw1/wireframe_renderer.dSYM/Contents/Resources/Relocations/aarch64/: wireframe_renderer.yml
hw2/: Makefile  README.md  io_utils.cpp  io_utils.h  main.cpp  raster_utils.cpp  raster_utils.h  scene_types.h  shaded_renderer  shading_utils.cpp  shading_utils.h  transform_utils.cpp  transform_utils.h
hw2/shaded_renderer.dSYM/Contents/Resources/Relocations/aarch64/: shaded_renderer.yml
hw3/: CMakeLists.txt  README.md  arcball.h  linalg.h  opengl_demo.cpp  opengl_renderer.cpp  quaternion.h  scene_loader.cpp  scene_loader.h  scene_types.h
hw4/: CMakeLists.txt  arcball.h  normal_map_renderer.cpp  opengl_renderer.cpp  png_loader.cpp  png_loader.h  quaternion.h  scene_loader.cpp  scene_types.h  shader_program.cpp  shader_program.h  texture_loader.cpp  texture_loader.h
hw4/hw4-demo-new/demo/: Makefile  glslRenderer  main.cpp  readpng.cpp
hw4/hw4-demo-new/demo/glslRenderer.dSYM/Contents/: Info.plist
hw4/hw4-demo-new/demo/glslRenderer.dSYM/Contents/Resources/DWARF/: glslRenderer
hw4/hw4-demo-new/demo/glslRenderer.dSYM/Contents/Resources/Relocations/aarch64/: glslRenderer.yml
hw4/shaders/: quad.frag  quad.vert  scene.frag  scene.vert
hw5/: CMakeLists.txt  README.md  arcball.h  scene_loader.cpp  scene_loader.h  scene_types.h  smooth.cpp
