cmake_minimum_required(VERSION 3.24)
project(hw0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
project(hw1 LANGUAGES CXX)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(GLEW REQUIRED)
add_executable(opengl_demo opengl_demo.cpp)
target_link_libraries(opengl_demo PRIVATE GLUT::GLUT GLEW::GLEW OpenGL::GL)